Updated comments and restructured for revision

--- a/Analysis_software/MCM-LE-barrier_analysis_Paper.ipynb
+++ b/Analysis_software/MCM-LE-barrier_analysis_Paper.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "<img style=\"float: left;\" src=\"https://icons.iconarchive.com/icons/dan-wiersma/solar-system/48/Mars-icon.png\">\n",
     "\n",
-    "## Jupyter notebooks \n",
+    "## Jupyter notebooks for single-molecule analysis\n",
     "\n",
     "#### Figures:\n",
     "+ Figure 4\n",
